namespace CodeBase.Constants
{
    public static class AnimationConstans
    {
        public const string StartGame = "StartGame";
        public const string EndGame = "EndGame";
        
        public const string Attack = "IsAttack";
        public const string Death = "Death";
        public const string ReactionOnHit = "ReactionOnHit";
        public const string Idle = "Idle";
    }
}
