namespace CodeBase.Constants
{
    public static class AnimationConstants
    {
        public const string StartGame = "StartGame";
        
        public const string Attack = "IsAttack";
        public const string Death = "Death";
        public const string ReactionOnHit = "ReactionOnHit";
        public const string Idle = "Idle";
    }
}
